--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic/holistic.js" crossorigin="anonymous"></script>
 </body>
 </html>
