--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <span style="color: cyan" id="fps">--</span> FPS
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
+    <!-- Load TensorFlow.js -->
+    <script src="https://unpkg.com/@tensorflow/tfjs"></script>
 </body>
 </html>
