feat: 🎸 select model based on device type

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <span style="color: cyan" id="fps">--</span> FPS
+  FPS: <span style="color: cyan" id="fps">--</span>
+  Model: <span style="color: cyan" id="modelName">--</span>
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@tensorflow/tfjs"></script>
