fix: 🐛 use ml5 posenet

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 <body>
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/@tensorflow/tfjs"></script>
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 </body>
 </html>
